// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should spread a single column across the max width 1`] = `
"A                   
────────────────────
Foo                 
Bar                 
"
`;

exports[`Table should truncate too long values using backspaces 1`] = `
"A                   
────────────────────
FooFooFooFooFooFooFooFooFooFoo…          
BarBarBarBarBarBarBarBarBarBar…          
"
`;
